Completed the Staff table function.

--- a/HotelWebApplication/Views/Home/Index.cshtml
+++ b/HotelWebApplication/Views/Home/Index.cshtml
@@ -3,7 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To Most Common Hotel</h1>
+    <p>We provide the best hospitality in town.</p>
+    <div class="text-center">
+        <img src="~/Images/Hotel.png" alt="bank" width="500" height="300" />
+    </div>
 </div>
 
