--- a/HotelWebApplication/Views/Staff/Staff.cshtml
+++ b/HotelWebApplication/Views/Staff/Staff.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Staff>
+﻿@model IEnumerable<HotelWebApplication.Models.Staff>
 
 <style>
     .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
