--- a/HotelWebApplication/Views/Shared/_Layout.cshtml
+++ b/HotelWebApplication/Views/Shared/_Layout.cshtml
@@ -23,13 +23,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Staff" asp-action="Staff">Staff Members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Book Room</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Booking" asp-action="BookingIndex">Book Room</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Staff" asp-action="AddStaff">Add Staff</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Api" asp-action="Index">Bookings</a>
                         </li>
                     </ul>
                 </div>
