--- a/HotelWebApplication/Views/Booking/BookingIndex.cshtml
+++ b/HotelWebApplication/Views/Booking/BookingIndex.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Booking" asp-action="AddStaff">
+        <form asp-controller="Booking" asp-action="AddBooking">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group" style="margin-top:40px;">
                 <label for="PayeeID" class="control-label">Room ID</label></br>
@@ -20,6 +20,9 @@
                     }
                 </select>
             </div>
+            <label for="BookingDate">Booking Date</label>
+            <input type="date" id="BookingDate" name="BookingDate"></br>
+            <span asp-validation-for="BookingDate" class="text-danger"></span>
             <div class="form-group" style="margin-top:40px;">
                 <label for="StaffID" class="control-label">Staff ID</label></br>
                 <select name="StaffID" id="StaffID">
