Final Formatting is done.

--- a/HotelWebApplication/Views/Booking/BookingIndex.cshtml
+++ b/HotelWebApplication/Views/Booking/BookingIndex.cshtml
@@ -20,8 +20,8 @@
                     }
                 </select>
             </div>
-            <label for="BookingDate">Booking Date</label>
-            <input type="date" id="BookingDate" name="BookingDate"></br>
+            <label for="BookingDate">Booking Date</label></br>
+            <input type="date" id="BookingDate" name="BookingDate">
             <span asp-validation-for="BookingDate" class="text-danger"></span>
             <div class="form-group" style="margin-top:40px;">
                 <label for="StaffID" class="control-label">Staff ID</label></br>
